--- a/html/weight.html
+++ b/html/weight.html
@@ -1,76 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>myAngularApp</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="utf-8">
-    <meta name="author" content="mat">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height">
-
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
+  <title>Express HTML</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.js"></script>
 
 </head>
 <body>
-
-  <h1>Weigth Portal</h1>
+  <div style="margin:100px;">
+    <nav class="navbar navbar-inverse navbar-static-top">
+      <div class="container">
+        <a class="navbar-brand" href="/">Express HTML</a>
+        <ul class="nav navbar-nav">
+          <li class="active">
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about">About</a>
+          </li>
+          <li>
+            <a href="/sitemap">Sitemap</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="jumbotron"  style="padding:40px;">
+      <h1>Weigth Portal</h1>
+      <p>Todo...</p>
+      <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+    </div>
   
-  <div id="chartContainer" style="width:100%;height: 600px"></div>
-  <script type="javascript">
-var chartDataSource = [
-    {
-        year: 1950, Africa: 227, Americas: 331,
-        Asia: 1436, Europe: 547, Oceania: 12
-    },
-    {
-        year: 1960, Africa: 285, Americas: 416,
-        Asia: 1718, Europe: 605, Oceania: 15
-    },
-    {
-        year: 1970, Africa: 365, Americas: 512,
-        Asia: 2156, Europe: 657, Oceania: 19
-    },
-    {
-        year: 1980, Africa: 478, Americas: 612,
-        Asia: 2644, Europe: 695, Oceania: 22
-    },
-    {
-        year: 1990, Africa: 633, Americas: 720,
-        Asia: 3180, Europe: 722, Oceania: 26
-    },
-    {
-        year: 2000, Africa: 810, Americas: 833,
-        Asia: 3678, Europe: 731, Oceania: 30
-    },
-    {
-        year: 2010, Africa: 1016, Americas: 936,
-        Asia: 4149, Europe: 728, Oceania: 35
-    }
-];
+  
+    <canvas id="chartContainer" width="400" height="400"></canvas>
+  
+      
+  </div>
+  
+  <script>
 
-$("#chartContainer").dxChart({
-    dataSource: chartDataSource,
-    commonSeriesSettings: {
-        argumentField: 'year'
-    },
-    series: [{
-        name: 'Oceania',
-        valueField: 'Oceania'
-    }, {
-        name: 'Africa',
-        valueField: 'Africa'
-    }, {
-        name: 'Americas',
-        valueField: 'Americas'
-    }, {
-        name: 'Asia',
-        valueField: 'Asia'
-    }, {
-        name: 'Europe',
-        valueField: 'Europe'
-    }]
-});
+var data = {
+    labels: ["January", "February", "March", "April", "May", "June", "July"],
+    datasets: [
+        {
+            label: "My First dataset",
+            fillColor: "rgba(220,220,220,0.2)",
+            strokeColor: "rgba(220,220,220,1)",
+            pointColor: "rgba(220,220,220,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(220,220,220,1)",
+            data: [65, 59, 80, 81, 56, 55, 40]
+        },
+        {
+            label: "My Second dataset",
+            fillColor: "rgba(151,187,205,0.2)",
+            strokeColor: "rgba(151,187,205,1)",
+            pointColor: "rgba(151,187,205,1)",
+            pointStrokeColor: "#fff",
+            pointHighlightFill: "#fff",
+            pointHighlightStroke: "rgba(151,187,205,1)",
+            data: [28, 48, 40, 19, 86, 27, 90]
+        }
+    ]
+};
 
+// Get the context of the canvas element we want to select
+var element = document.getElementById("chartContainer");
+var ctx = element.getContext("2d");
+var myLineChart = new Chart(ctx).Line(data);
 
   </script>
 
