--- a/weight.html
+++ b/weight.html
@@ -52,7 +52,7 @@ var data = {
             pointStrokeColor: "#fff",
             pointHighlightFill: "#fff",
             pointHighlightStroke: "rgba(220,220,220,1)",
-            data: {{chartData}}
+            data: result
         }
         
     ]
