--- a/weight.html
+++ b/weight.html
@@ -34,12 +34,12 @@
     </div>
   
   
-    <canvas id="chartContainer" width="400" height="400"></canvas>
+    <canvas id="buyers" width="400" height="400"></canvas>
   
       
   </div>
   
- 
+  
 
 </body>
 </html>
