--- a/weight.html
+++ b/weight.html
@@ -40,15 +40,17 @@
   </div>
   
   <script>
+    for (var i = 0; i < data.length; i++ ) {
+	var point = data[i];
 	var buyerData = {
-	labels : ["January","February","March","April","May","June"],
+	labels : ["1","2","3","4"],
 	datasets : [
 		{
 			fillColor : "rgba(172,194,132,0.4)",
 			strokeColor : "#ACC26D",
 			pointColor : "#fff",
 			pointStrokeColor : "#9DB86D",
-			data : [203,156,99,251,305,247]
+			data : JSON.stringify(point.measures[0].value*0.01)
 		}
 	]
 }
