--- a/weight.html
+++ b/weight.html
@@ -42,6 +42,8 @@
   <script>
     for (var i = 0; i < data.length; i++ ) {
 	var point = data[i];
+	var result = JSON.stringify(point.measures[0].value*0.01)
+	}
 	var buyerData = {
 	labels : ["1","2","3","4"],
 	datasets : [
@@ -50,7 +52,7 @@
 			strokeColor : "#ACC26D",
 			pointColor : "#fff",
 			pointStrokeColor : "#9DB86D",
-			data : JSON.stringify(point.measures[0].value*0.01)
+			data : result
 		}
 	]
 }
