--- a/weight.html
+++ b/weight.html
@@ -33,7 +33,7 @@
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
   
-  
+	<div class="results"></div>
     <canvas id="buyers" width="400" height="400"></canvas>
   
       
@@ -49,7 +49,7 @@
 			strokeColor : "#ACC26D",
 			pointColor : "#fff",
 			pointStrokeColor : "#9DB86D",
-			data : JSON.stringify(point.measures[0].value*0.01)
+			data : [45, 47, 46]
 		}
 	]
 }
