--- a/weight.html
+++ b/weight.html
@@ -34,7 +34,7 @@
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
   
-	<div class="results"></div>
+	<div id="myEdit"></div>
     <canvas id="buyers" width="400" height="400"></canvas>
   
       
