--- a/weight.html
+++ b/weight.html
@@ -34,12 +34,31 @@
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
   
-	<div id="myEdit"></div>
+	
     <canvas id="buyers" width="400" height="400"></canvas>
   
       
   </div>
-  
-  
+ <script>
+ 
+	var buyerData = {
+	labels : ["1","2","3","4"],
+	datasets : [
+		{
+			fillColor : "rgba(172,194,132,0.4)",
+			strokeColor : "#ACC26D",
+			pointColor : "#fff",
+			pointStrokeColor : "#9DB86D",
+			data : [45, 47, 46]
+		}
+	]
+}
+
+	var buyers = document.getElementById('buyers').getContext('2d');
+    new Chart(buyers).Line(buyerData);
+
+  </script> 
+ 
+
 </body>
 </html>
