--- a/weight.html
+++ b/weight.html
@@ -29,12 +29,12 @@
       </div>
     </nav>
     <div class="jumbotron"  style="padding:40px;">
-      <h1>Weigth Portal</h1>
+      <h1>Weight Portal</h1>
       <p>Todo...</p>
       <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
     </div>
   
-	
+	<div id="infos"></div>
     <canvas id="buyers" width="400" height="400"></canvas>
   
       
